--- a/ProductList.xaml
+++ b/ProductList.xaml
@@ -27,12 +27,12 @@
                 <ColumnDefinition></ColumnDefinition>
                 <ColumnDefinition></ColumnDefinition>
             </Grid.ColumnDefinitions>
-            <TextBox  Grid.Column="0" Margin="5"></TextBox>
-            <ComboBox DisplayMemberPath="Name" Grid.Column="1" Margin="5" SelectionChanged="ComboBox_SelectionChanged"></ComboBox>
+            <TextBox  Grid.Column="0" Margin="5" TextChanged="TextBox_TextChanged"></TextBox>
+            <ComboBox DisplayMemberPath="Name" Grid.Column="1" Margin="5" SelectionChanged="ComboBox_SelectionChanged" ItemsSource="{Binding SortLists}"></ComboBox>
             <ComboBox Grid.Column="2" Margin="5" DisplayMemberPath="name" SelectedItem="{Binding SelectedSortCategory}"></ComboBox>
             <ComboBox Grid.Column="3" Margin="5"></ComboBox>
         </Grid>
-        <ListView x:Name="ProductView" HorizontalAlignment="Stretch" Background="WhiteSmoke" Grid.Row="2" Grid.Column="1" SelectionChanged="ProductView_SelectionChanged">
+        <ListView x:Name="ProductView" HorizontalAlignment="Stretch" Background="WhiteSmoke" Grid.Row="2" Grid.Column="1">
             <ListView.ItemTemplate>
                 <DataTemplate>
                     <Grid>
@@ -49,9 +49,9 @@
                                 <Run FontSize="16"  Text="{Binding Name}"></Run>
                             </TextBlock>
                             <TextBlock TextAlignment="Left">
-                                <Run FontSize="20">Размер:</Run>
+                                <Run FontSize="20">Описание</Run>
                                 <LineBreak></LineBreak>
-                                <Run FontSize="16" Text="{Binding Size}"></Run>
+                                <Run FontSize="16" Text="{Binding Description}"></Run>
                             </TextBlock>
                             <TextBlock TextAlignment="Left">
                                 <Run FontSize="20">Цена:</Run>
@@ -60,10 +60,10 @@
                                 <Run>Руб.</Run>
                             </TextBlock>
                             <TextBlock TextAlignment="Left">
-                                <Run FontSize="20">Количество:</Run>
+                                <Run FontSize="20">Количество на складе:</Run>
                                 <LineBreak></LineBreak>
-                                <Run FontSize="16" Text="{Binding Unit}"></Run>
-                                <Run>Шт.</Run>
+                                <Run FontSize="16" Text="{Binding QuantityInStock}"></Run>
+                                <Run></Run>
                             </TextBlock>
                         </StackPanel>
                         <StackPanel VerticalAlignment="Top" Grid.Column="2">
