--- a/ProductPage.xaml
+++ b/ProductPage.xaml
@@ -5,7 +5,7 @@
       xmlns:d="http://schemas.microsoft.com/expression/blend/2008" 
       xmlns:local="clr-namespace:ExamWPF_by_NN_"
       mc:Ignorable="d" 
-      d:DesignHeight="450" d:DesignWidth="800"
+      d:DesignHeight="600" d:DesignWidth="800"
       Title="ProductPage">
 
 
@@ -27,18 +27,18 @@
             <Label FontSize="15" Margin="3">Категория</Label>
             <ComboBox SelectedItem="{Binding Category}" Margin="15" Name="cbCategory"></ComboBox>
             <Label FontSize="15">Количество на складе</Label>
-            <TextBox Name="tbQuantityInStock" FontSize="15" Margin="10" Foreground="Black"></TextBox>
+            <TextBox Name="tbQuantityInStock" FontSize="15" Margin="10" Foreground="Black" Text="{Binding QuantityInStock}"></TextBox>
             <Label FontSize="15">Единица измерения</Label>
             <TextBox Name="tbUnitOfMeasurement" FontSize="15" Margin="10" Foreground="Black"></TextBox>
             <Label FontSize="15">Поставщик</Label>
             <TextBox Name="tbProvider" FontSize="15" Margin="10" Foreground="Black"></TextBox>
             <Label FontSize="15">Стоимость за единицу</Label>
             <TextBox Name="tbPrice" FontSize="15" Margin="10" Foreground="Black"></TextBox>
-            <Button Width="119" x:Name="BtnSaveClick" Content="Добавить" Margin="0 5 0 10"/>
+            <Button Width="119" x:Name="BtnSaveClick" Content="Добавить" Margin="0 5 0 10" Click="AddProduct"/>
         </StackPanel>
         <StackPanel Grid.Row="1" Grid.Column="2">
             <Image Width="300" Height="200" Name="ImageBlock"></Image>
-            <Button Content="Выбрать иозбражение" Width="150" ></Button>
+            <Button Content="Выбрать иозбражение" Width="150"></Button>
             <Label HorizontalAlignment="Center">Описание</Label>
             <TextBox Height="200"></TextBox>
         </StackPanel>
