--- a/ProductPage.xaml
+++ b/ProductPage.xaml
@@ -38,7 +38,7 @@
         </StackPanel>
         <StackPanel Grid.Row="1" Grid.Column="2">
             <Image Width="300" Height="200" Name="ImageBlock"></Image>
-            <Button Content="Выбрать иозбражение" Width="150"></Button>
+            <Button Content="Выбрать иозбражение" Width="150" Click="Button_Click"></Button>
             <Label HorizontalAlignment="Center">Описание</Label>
             <TextBox Height="200"></TextBox>
         </StackPanel>
