--- a/ProductList.xaml
+++ b/ProductList.xaml
@@ -32,7 +32,7 @@
             <ComboBox Grid.Column="2" Margin="5" DisplayMemberPath="name" SelectedItem="{Binding SelectedSortCategory}"></ComboBox>
             <ComboBox Grid.Column="3" Margin="5"></ComboBox>
         </Grid>
-        <ListView x:Name="ProductView" HorizontalAlignment="Stretch" Background="WhiteSmoke" Grid.Row="2" Grid.Column="1">
+        <ListView x:Name="ProductView" HorizontalAlignment="Stretch" Background="WhiteSmoke" Grid.Row="2" Grid.Column="1" SelectionChanged="ProductView_SelectionChanged">
             <ListView.ItemTemplate>
                 <DataTemplate>
                     <Grid>
