--- a/ProductPage.xaml
+++ b/ProductPage.xaml
@@ -29,18 +29,18 @@
             <Label FontSize="15">Количество на складе</Label>
             <TextBox Name="tbQuantityInStock" FontSize="15" Margin="10" Foreground="Black" Text="{Binding QuantityInStock}"></TextBox>
             <Label FontSize="15">Единица измерения</Label>
-            <TextBox Name="tbUnitOfMeasurement" FontSize="15" Margin="10" Foreground="Black"></TextBox>
+            <TextBox Name="tbUnitOfMeasurement" FontSize="15" Margin="10" Foreground="Black" Text="{Binding Unit}"></TextBox>
             <Label FontSize="15">Поставщик</Label>
-            <TextBox Name="tbProvider" FontSize="15" Margin="10" Foreground="Black"></TextBox>
+            <TextBox Name="tbProvider" FontSize="15" Margin="10" Foreground="Black" Text="{Binding Provider}"></TextBox>
             <Label FontSize="15">Стоимость за единицу</Label>
-            <TextBox Name="tbPrice" FontSize="15" Margin="10" Foreground="Black"></TextBox>
+            <TextBox Name="tbPrice" FontSize="15" Margin="10" Foreground="Black" Text="{Binding Cost}"></TextBox>
             <Button Width="119" x:Name="BtnSaveClick" Content="Добавить" Margin="0 5 0 10" Click="AddProduct"/>
         </StackPanel>
         <StackPanel Grid.Row="1" Grid.Column="2">
             <Image Width="300" Height="200" Name="ImageBlock"></Image>
-            <Button Content="Выбрать иозбражение" Width="150" Click="Button_Click"></Button>
+            <Button Content="Выбрать иозбражение" Width="150" Click="SelectImageAndAdd"></Button>
             <Label HorizontalAlignment="Center">Описание</Label>
-            <TextBox Height="200"></TextBox>
+            <TextBox Height="200" Name="tbDescription" Text="{Binding Description}"></TextBox>
         </StackPanel>
     </Grid>
 </Page>
