--- a/AutorizationPage.xaml
+++ b/AutorizationPage.xaml
@@ -28,7 +28,7 @@
                 <Label Name ="lCaptcha" FontSize="30"></Label>
             </StackPanel>
             <Button Content="Войти" Width="100" Height="20" Margin="10" Click="Button_Click"></Button>
-                
         </StackPanel>
+        <Image HorizontalAlignment="Center" Height="100" VerticalAlignment="Bottom" Grid.Column="1" Grid.Row="1" Width="100" x:Name="CaptchaBlok" Visibility="Collapsed"/>
     </Grid>
 </Page>
