--- a/ProductPage.xaml
+++ b/ProductPage.xaml
@@ -42,6 +42,9 @@
             <Label HorizontalAlignment="Center">Описание</Label>
             <TextBox Height="200" Name="tbDescription" Text="{Binding Description}"></TextBox>
         </StackPanel>
+        <Border Grid.Column="1">
+            <Button Content="back" Width="100" HorizontalAlignment="Left" Click="BackToMenu"></Button>
+        </Border>
     </Grid>
 </Page>
 
