--- a/ProductPage.xaml
+++ b/ProductPage.xaml
@@ -34,13 +34,13 @@
             <TextBox Name="tbProvider" FontSize="15" Margin="10" Foreground="Black" Text="{Binding Provider}"></TextBox>
             <Label FontSize="15">Стоимость за единицу</Label>
             <TextBox Name="tbPrice" FontSize="15" Margin="10" Foreground="Black" Text="{Binding Cost}"></TextBox>
+            <Label HorizontalAlignment="Left" FontSize="15">Описание</Label>
+            <TextBox Height="20" Margin="10" Name="tbDescription" Text="{Binding Description}"></TextBox>
             <Button Width="119" x:Name="BtnSaveClick" Content="Добавить" Margin="0 5 0 10" Click="AddProduct"/>
         </StackPanel>
         <StackPanel Grid.Row="1" Grid.Column="2">
-            <Image Width="300" Height="200" Name="ImageBlock"></Image>
+            <Image Width="300" Height="200" Name="ImageBlockk"></Image>
             <Button Content="Выбрать иозбражение" x:Name="BtnSaveImage" Width="150" Click="SelectImageAndAdd"></Button>
-            <Label HorizontalAlignment="Center">Описание</Label>
-            <TextBox Height="200" Name="tbDescription" Text="{Binding Description}"></TextBox>
         </StackPanel>
         <Border Grid.Column="1">
             <Button Content="back" Width="100" HorizontalAlignment="Left" Click="BackToMenu"></Button>
