--- a/ProductEdit.xaml
+++ b/ProductEdit.xaml
@@ -5,7 +5,7 @@
       xmlns:d="http://schemas.microsoft.com/expression/blend/2008" 
       xmlns:local="clr-namespace:ExamWPF_by_NN_"
       mc:Ignorable="d" 
-      d:DesignHeight="500" d:DesignWidth="800"
+      d:DesignHeight="600" d:DesignWidth="800"
       Title="ProductEdit">
 
     <Grid>
@@ -34,13 +34,13 @@
                 <TextBox Name="tbProvider" FontSize="15" Margin="10" Foreground="Black" Text="{Binding Provider}"></TextBox>
                 <Label FontSize="15">Стоимость за единицу</Label>
                 <TextBox Name="tbPrice" FontSize="15" Margin="10" Foreground="Black" Text="{Binding Cost}"></TextBox>
+                <Label HorizontalAlignment="Left" FontSize="15">Описание</Label>
+                <TextBox Height="20" Margin="10" Name="tbDescription" Text="{Binding Description}"></TextBox>
                 <Button Width="119" x:Name="BtnSaveClick" Content="Сохранить" Margin="0 5 0 10" Click="SaveProduct"/>
             </StackPanel>
             <StackPanel Grid.Row="1" Grid.Column="2">
                 <Image Width="300" Height="200" Name="ImageBlock"></Image>
                 <Button Content="Выбрать иозбражение" Width="150"></Button>
-                <Label HorizontalAlignment="Center">Описание</Label>
-                <TextBox Height="200" Name="tbDescription" Text="{Binding Description}"></TextBox>
             </StackPanel>
         </Grid>
     </Grid>
