--- a/AutorizationPage.xaml
+++ b/AutorizationPage.xaml
@@ -26,9 +26,9 @@
             <TextBox Name="tbPassword" HorizontalAlignment="Center" Width="200" Margin="0" Height="24"></TextBox>
             <StackPanel Name="CaptchaBlock" Visibility="Collapsed">
                 <Label Name ="lCaptcha" FontSize="30"></Label>
+                <TextBox Name="tbCaptcha"></TextBox>
             </StackPanel>
             <Button Content="Войти" Width="100" Height="20" Margin="10" Click="Button_Click"></Button>
         </StackPanel>
-        <Image HorizontalAlignment="Center" Height="100" VerticalAlignment="Bottom" Grid.Column="1" Grid.Row="1" Width="100" x:Name="CaptchaBlok" Visibility="Collapsed"/>
     </Grid>
 </Page>
