--- a/ProductEdit.xaml
+++ b/ProductEdit.xaml
@@ -5,7 +5,7 @@
       xmlns:d="http://schemas.microsoft.com/expression/blend/2008" 
       xmlns:local="clr-namespace:ExamWPF_by_NN_"
       mc:Ignorable="d" 
-      d:DesignHeight="600" d:DesignWidth="800"
+      d:DesignHeight="800" d:DesignWidth="800"
       Title="ProductEdit">
 
     <Grid>
@@ -22,6 +22,8 @@
                 <ColumnDefinition Width="30"></ColumnDefinition>
             </Grid.ColumnDefinitions>
             <StackPanel Grid.Row="1" Grid.Column="1" x:Name="ProductBlock">
+                <Label FontSize="15">Артикул</Label>
+                <TextBox Name="tbArticle" FontSize="15" Margin="10" Foreground="Black" Text="{Binding Article}"></TextBox>
                 <Label FontSize="15">Название</Label>
                 <TextBox Name="tbCategoryName" FontSize="15" Margin="10" Foreground="Black" Text="{Binding Name}"></TextBox>
                 <Label FontSize="15" Margin="3">Категория</Label>
@@ -32,11 +34,13 @@
                 <TextBox Name="tbUnitOfMeasurement" FontSize="15" Margin="10" Foreground="Black" Text="{Binding Unit}"></TextBox>
                 <Label FontSize="15">Поставщик</Label>
                 <TextBox Name="tbProvider" FontSize="15" Margin="10" Foreground="Black" Text="{Binding Provider}"></TextBox>
+                <Label FontSize="15">Производитель</Label>
+                <TextBox Name="tbManufacturer" FontSize="15" Margin="10" Foreground="black" Text="{Binding Manufacturer}"></TextBox>
                 <Label FontSize="15">Стоимость за единицу</Label>
                 <TextBox Name="tbPrice" FontSize="15" Margin="10" Foreground="Black" Text="{Binding Cost}"></TextBox>
                 <Label HorizontalAlignment="Left" FontSize="15">Описание</Label>
                 <TextBox Height="20" Margin="10" Name="tbDescription" Text="{Binding Description}"></TextBox>
-                <Button Width="119" x:Name="BtnSaveClick" Content="Сохранить" Margin="0 5 0 10" Click="SaveProduct"/>
+                <Button Width="119" x:Name="BtnSaveClick" Content="Сохранить" Margin="0 5 0 10" Click=" SaveProduct"/>
             </StackPanel>
             <StackPanel Grid.Row="1" Grid.Column="2">
                 <Image Width="300" Height="200" Name="ImageBlock"></Image>
