--- a/MainWindow.xaml
+++ b/MainWindow.xaml
@@ -5,6 +5,7 @@
         xmlns:mc="http://schemas.openxmlformats.org/markup-compatibility/2006"
         xmlns:local="clr-namespace:ExamWPF_by_NN_"
         mc:Ignorable="d"
-        Title="MainWindow" Height="800" Width="800">
-    <Frame Name="AppFr" NavigationUIVisibility="Hidden"></Frame>
+        Background="MediumSeaGreen"
+        Title="MainWindow" Height="850" Width="1000">
+    <Frame Name="AppFr" NavigationUIVisibility="Hidden" Background="MediumSeaGreen"></Frame>
 </Window>
