--- a/ProductEdit.xaml
+++ b/ProductEdit.xaml
@@ -5,11 +5,13 @@
       xmlns:d="http://schemas.microsoft.com/expression/blend/2008" 
       xmlns:local="clr-namespace:ExamWPF_by_NN_"
       mc:Ignorable="d" 
-      d:DesignHeight="800" d:DesignWidth="800"
-      Title="ProductEdit">
+      d:DesignHeight="870" d:DesignWidth="800"
+      Title="ProductEdit"
+    xmlns:theme="clr-namespace:Microsoft.Windows.Themes;assembly=PresentationFramework.Aero2">
+    
 
     <Grid>
-        <Grid Background="white">
+        <Grid Background="MediumSeaGreen">
             <Grid.RowDefinitions>
                 <RowDefinition Height="30"></RowDefinition>
                 <RowDefinition Height="auto"></RowDefinition>
@@ -17,34 +19,35 @@
             </Grid.RowDefinitions>
             <Grid.ColumnDefinitions>
                 <ColumnDefinition Width="30"></ColumnDefinition>
-                <ColumnDefinition></ColumnDefinition>
+                <ColumnDefinition Width="400"></ColumnDefinition>
                 <ColumnDefinition></ColumnDefinition>
                 <ColumnDefinition Width="30"></ColumnDefinition>
             </Grid.ColumnDefinitions>
             <StackPanel Grid.Row="1" Grid.Column="1" x:Name="ProductBlock">
-                <Label FontSize="15">Артикул</Label>
-                <TextBox Name="tbArticle" FontSize="15" Margin="10" Foreground="Black" Text="{Binding ArticleNumber}"></TextBox>
-                <Label FontSize="15">Название</Label>
+                <Label FontSize="20">Артикул</Label>
+                <TextBox Name="tbArticle" FontSize="15" Margin="10" Foreground="Black" Text="{Binding ArticleNumber}" ></TextBox>
+                <Label FontSize="20">Название</Label>
                 <TextBox Name="tbCategoryName" FontSize="15" Margin="10" Foreground="Black" Text="{Binding Name}"></TextBox>
-                <Label FontSize="15" Margin="3">Категория</Label>
+                <Label FontSize="20" Margin="3">Категория</Label>
                 <ComboBox SelectedItem="{Binding Category}" Margin="15" Name="cbCategory"></ComboBox>
-                <Label FontSize="15">Количество на складе</Label>
+                <Label FontSize="20">Количество на складе</Label>
                 <TextBox Name="tbQuantityInStock" FontSize="15" Margin="10" Foreground="Black" Text="{Binding QuantityInStock}"></TextBox>
-                <Label FontSize="15">Единица измерения</Label>
+                <Label FontSize="20">Единица измерения</Label>
                 <TextBox Name="tbUnitOfMeasurement" FontSize="15" Margin="10" Foreground="Black" Text="{Binding Unit}"></TextBox>
-                <Label FontSize="15">Поставщик</Label>
+                <Label FontSize="20">Поставщик</Label>
                 <TextBox Name="tbProvider" FontSize="15" Margin="10" Foreground="Black" Text="{Binding Provider}"></TextBox>
-                <Label FontSize="15">Производитель</Label>
+                <Label FontSize="20">Производитель</Label>
                 <TextBox Name="tbManufacturer" FontSize="15" Margin="10" Foreground="black" Text="{Binding Manufacturer}"></TextBox>
-                <Label FontSize="15">Стоимость за единицу</Label>
+                <Label FontSize="20">Стоимость за единицу</Label>
                 <TextBox Name="tbPrice" FontSize="15" Margin="10" Foreground="Black" Text="{Binding Cost}"></TextBox>
-                <Label HorizontalAlignment="Left" FontSize="15">Описание</Label>
+                <Label HorizontalAlignment="Left" FontSize="20">Описание</Label>
                 <TextBox Height="20" Margin="10" Name="tbDescription" Text="{Binding Description}"></TextBox>
                 <Button Width="119" x:Name="BtnSaveClick" Content="Сохранить" Margin="0 5 0 10" Click=" SaveProduct"/>
                 <Button x:Name="DeleteClick" Width="118" Height="20" Content="Удалить товар" Click="DeleteClick_Click"/>
+                <Button x:Name="StopEditS" Width="118" Height="20" Content="Отмена" Margin="0 8 0 10" Click="StopEdit"></Button>
             </StackPanel>
             <StackPanel Grid.Row="1" Grid.Column="2">
-                <Image Width="300" Height="200" Name="ImageBlock"></Image>
+                <Image Width="400" Height="400" Name="ImageBlock"></Image>
                 <Button Content="Выбрать иозбражение" Width="150" Click="Button_Click"></Button>
             </StackPanel>
         </Grid>
