--- a/ProductPage.xaml
+++ b/ProductPage.xaml
@@ -43,9 +43,9 @@
             <Button Width="119" x:Name="BtnSaveClick" Content="Добавить" HorizontalAlignment="Center" Margin="0 5 0 10" Click="AddProduct"/>
         </StackPanel>
         <StackPanel Grid.Row="1" Grid.Column="2">
-            <Image Width="300" Height="200" Name="ImageBlock">
+            <Image Width="350" Height="400" Name="ImageBlock">
             </Image>
-            <Button Width="200" Height="20" Click="Button_Click">add</Button>
+            <Button Width="200" Height="20" Click="Button_Click">Добавить изображение</Button>
         </StackPanel>
         <Border Grid.Column="1">
             <Button Content="back" Width="100" HorizontalAlignment="Left" Click="BackToMenu"></Button>
