--- a/Menu.xaml
+++ b/Menu.xaml
@@ -12,6 +12,7 @@
         <Grid.ColumnDefinitions>
             <ColumnDefinition></ColumnDefinition>
             <ColumnDefinition></ColumnDefinition>
+            <ColumnDefinition></ColumnDefinition>
         </Grid.ColumnDefinitions>
         <Grid.RowDefinitions>
             <RowDefinition></RowDefinition>
@@ -20,6 +21,7 @@
         </Grid.RowDefinitions>
         <Button Grid.Row="1" Height="50" Width="150" Content="Посмотреть товары" Click="ViewProduct"></Button>
         <Button Grid.Row="1" Grid.Column="2" Height="50" Width="150" Content="Добавить товары" Click="AddProduct"></Button>
+        <Button Grid.Column="1" Grid.Row="1" Height="50" Width="200" Content="Добавить нового пользователя" Click="GoToAddUser"></Button>
     </Grid>
     
 </Page>
