--- a/UserPage.xaml
+++ b/UserPage.xaml
@@ -12,13 +12,31 @@
         <Grid.ColumnDefinitions>
             <ColumnDefinition Width="100"></ColumnDefinition>
             <ColumnDefinition></ColumnDefinition>
-            <ColumnDefinition></ColumnDefinition>
             <ColumnDefinition Width="100"></ColumnDefinition>
         </Grid.ColumnDefinitions>
         <Grid.RowDefinitions>
-            <RowDefinition Height="100"></RowDefinition>
+            <RowDefinition Height="60"></RowDefinition>
             <RowDefinition></RowDefinition>
-            <RowDefinition Height="100"></RowDefinition>
+            <RowDefinition Height="60"></RowDefinition>
         </Grid.RowDefinitions>
+        <StackPanel Grid.Column="1" Grid.Row="1">
+            <Label FontSize="20">Фамилия</Label>
+            <TextBox Width="auto" Height="30"></TextBox>
+            <Label FontSize="20">Имя</Label>
+            <TextBox Width="auto" Height="30"></TextBox>
+            <Label FontSize="20">Отчество</Label>
+            <TextBox Width="auto" Height="30"></TextBox>
+            <Label FontSize="20">Логин</Label>
+            <TextBox Width="auto" Height="30"></TextBox>
+            <Label FontSize="20">Пароль</Label>
+            <TextBox Width="auto" Height="30"></TextBox>
+            <Label FontSize="20">Роль</Label>
+            <ComboBox Height="30" SelectedItem="{Binding Role}"></ComboBox>
+            <Label FontSize="20">Фото</Label>
+            <Image x:Name="PhotoBlock" Width="150" Height="100"></Image>
+            <Button Click="AddPhoto" Width="100">Добавить фото</Button>
+            <Button Margin="0 10 0 10" Width="150">Добавить пользователя</Button>
+            <Button Margin="0 5 0 10" Width="130" Height="20" HorizontalAlignment="Center">Список пользователей</Button>
+        </StackPanel>
     </Grid>
 </Page>
