--- a/UserPage.xaml
+++ b/UserPage.xaml
@@ -36,7 +36,7 @@
             <Image x:Name="PhotoBlock" Width="150" Height="100"></Image>
             <Button Click="AddPhoto" Width="100">Добавить фото</Button>
             <Button Margin="0 10 0 10" Width="150">Добавить пользователя</Button>
-            <Button Margin="0 5 0 10" Width="130" Height="20" HorizontalAlignment="Center">Список пользователей</Button>
+            <Button Margin="0 5 0 10" Width="130" Height="20" HorizontalAlignment="Center" Click="toUserList">Список пользователей</Button>
         </StackPanel>
     </Grid>
 </Page>
